infra/k8s/service-3/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: service-3
spec:
  mtls:
    mode: STRICT
